Bug 6455 - battery and AC status stops updating - HP Compaq nx6125
Summary: battery and AC status stops updating - HP Compaq nx6125
Status: CLOSED CODE_FIX
Alias: None
Product: ACPI
Classification: Unclassified
Component: Power-Battery (show other bugs)
Hardware: i386 Linux
: P2 normal
Assignee: Vladimir Lebedev
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2006-04-28 14:23 UTC by Jure Repinc
Modified: 2006-06-30 17:01 UTC (History)
1 user (show)

See Also:
Kernel Version: 2.6.16.11
Tree: Mainline
Subsystem:
Regression: ---


Attachments
dmesg -s40000 output (15.07 KB, text/plain)
2006-04-28 14:59 UTC, Jure Repinc
Details
dmidecode output (6.62 KB, text/plain)
2006-04-28 14:59 UTC, Jure Repinc
Details
lspci -vv output (16.05 KB, text/plain)
2006-04-28 15:01 UTC, Jure Repinc
Details
cat /proc/interrupts output (500 bytes, text/plain)
2006-04-28 15:02 UTC, Jure Repinc
Details
Tnis is a debug patch (829 bytes, patch)
2006-06-20 16:46 UTC, Vladimir Lebedev
Details | Diff

Description Jure Repinc 2006-04-28 14:23:51 UTC
Most recent kernel where this bug did not occur: not known
Distribution: Gentoo Linux
Hardware Environment: HP Compaq nx6125 laptop with AMD Turion 64 CPU, BIOS F.0E
Software Environment: KDE 3.5.2
Problem Description:
At some point battery and AC status just stops updating. This happens when I
unplug the AC cable and when I start my laptop withiut being connected to AC
power. I think that it is more likely to happen when I do something that uses a
lot of CPU or Graphics power.

Steps to reproduce:
I can't tell you the exact steps as I didn't figure out what causes it to stop
updating. Most of the time it stops working when I power on my laptop while
travelling by train to the work and then at some point it justs stops updating.
It also happens at one point when if keep plugginh and unplugging the laptop
from AC power. High CPU usage at that time may help in causing this bug.
Comment 1 Jure Repinc 2006-04-28 14:59:01 UTC
Created attachment 7976 [details]
dmesg -s40000 output
Comment 2 Jure Repinc 2006-04-28 14:59:58 UTC
Created attachment 7977 [details]
dmidecode output
Comment 3 Jure Repinc 2006-04-28 15:01:27 UTC
Created attachment 7978 [details]
lspci -vv output
Comment 4 Jure Repinc 2006-04-28 15:02:36 UTC
Created attachment 7979 [details]
cat /proc/interrupts output
Comment 5 Vladimir Lebedev 2006-05-20 08:50:03 UTC
This is known bug. We are in investigation stage.
 
Comment 6 Vladimir Lebedev 2006-05-21 08:37:38 UTC
Please try the 2.6.17-rc4-mm2 version.
There are some changes which should help here,
At least this version works on our nx6125 laptop.

Comment 7 Vladimir Lebedev 2006-05-26 05:48:47 UTC
rc4-mm3 is available now.
Comment 8 Jure Repinc 2006-06-01 06:37:32 UTC
I've been running with 2.6.17-rc4-mm3 for a couple of days now and so far the
battery status continued to update just fine (and I let it down from 100% to
almost 0% a couple of times). So I guess there is a big improvement in this version.

But I also got it to stop updating. What I did this time was that I repeatedly
plugged and un-plugged the AC power. For example I unplugged the power, waited
about 10 seconds then plugged the power back in and I repeated this about 10
times and after that the status again stopped updating.
Comment 9 Vladimir Lebedev 2006-06-08 08:46:09 UTC
Please retry 2.6.17-rc6-mm1.
Bug is present, but the probability is decreased.
Your opinion is needed


Comment 10 Jure Repinc 2006-06-08 11:34:02 UTC
I just compiled 2.6.17-rc6-mm1 and after a couple of quick unplugs and plugs 
the status stoll stops updating.
Comment 11 Jure Repinc 2006-06-08 12:09:32 UTC
Now after a couple of minutes (with no status updating) I started to compile 
something for KDE. The CPU started to get hot and so the fans turned on. And at 
about the same time the battery status started to update too.
Comment 12 Vladimir Lebedev 2006-06-08 20:36:02 UTC
Thanks, we have the same situation and continue the investigation.
But you wrote only about battery, I think the same thing should be with the AC 
adapter state on your laptop also, is it?
Comment 13 Jure Repinc 2006-06-08 20:46:15 UTC
Well yes I guess the same broblem is with AC too. But when you are only on AC 
there isn't much to change (like the battery level). If it gets stuck when the 
status shows "On AC power" and then you unplug the power it doesn't update that 
now you are runing on battery. And if it gets stuck when you are on battery, 
then it doesn't update the changes in battery level or when you plug the AC 
power back it doesn't reflect that. Thanks for working on the problem!
Comment 14 Vladimir Lebedev 2006-06-13 06:02:55 UTC
Please try 2.6.17-rc6-mm2 version (or later mm tree) with option ec_burst=0
Bug should disappear.
We need your results.


Comment 15 Vladimir Lebedev 2006-06-13 06:05:28 UTC
Sorry, I mean ec_intr=0 instead of ec_burst


Comment 16 Jure Repinc 2006-06-13 06:47:24 UTC
I tried with 2.6.17-rc6-mm2 and ec_intr=0 option and battery status continued to
update when I was quickly plugging un unplugging the AC power. Even when I had
glxgears running. So it looks like the bug has gone away.
Comment 17 Vladimir Lebedev 2006-06-14 13:55:42 UTC
Thanks, but bug is still present if ec_intr=1
We will continue the investigation.

Comment 18 Vladimir Lebedev 2006-06-20 16:46:31 UTC
Created attachment 8356 [details]
Tnis is a debug patch

Tnis is a debug patch
Comment 19 Vladimir Lebedev 2006-06-20 16:50:52 UTC

Please apply this patch (comment #18) to rc6-mm2 or (maybe) to other latest mm 
tree
We are very interested in the result; I mean the whole system behaviors.
Please upload the results as soon as possible.

Thanks.
Vladimir
Comment 20 Vladimir Lebedev 2006-06-21 05:22:37 UTC
Patch from comment 18 fixed problems on my nx6125, marking bug as resolved. 
Comment 21 Jure Repinc 2006-06-21 05:25:47 UTC
I have also been testing this in the morning and with the patch battery status
continues to update even when I quickly keep plugging/unplugging the AC power.
And yes this is without the ec_intr=0 kernel option. So thanks again for all
your work!
Comment 22 Jure Repinc 2006-06-27 13:27:32 UTC
I'm not sure if this is related to this bug and patch:

In KSysGuard 3.5.3 I have set up two tabs. On one I have 4 temperature 
displays, each for one of four acpi thermal zone temperatures. On the other tab 
I have 4 displays that show statuses for each of four fans. What happens if I 
leave KSysGuard open on temperatures tab for example is that after some time 
(could be even a couple of minutes) the system just locks up / freezes.

In both three cases that happened this to me I was compiling something, leftthe 
temperatures tab open and after some time system just froze.

This hasn't happened so far with stable kernel 2.6.17, but it did happen with 
2.6.17-mm2/3.

I don't know if I should reopen this bug or report a new one. And I don't know 
what to do to get more info about why this happens.
Comment 23 Vladimir Lebedev 2006-06-28 05:14:05 UTC
Please look into the bug 5534, do you have the same issues?
Comment 24 Vladimir Lebedev 2006-06-28 10:33:39 UTC
Could you please describe properly, what happens with your system and how it 
is connected with patch from comment #18.
Comment 25 Len Brown 2006-06-30 17:01:47 UTC
patch in comment #18 shipped after 2.6.17-git17 
and before 2.6.18-rc1.  If you have additional issues 
on this system, please open a new bug.  closed. 

Note You need to log in before you can comment on or make changes to this bug.